2020-07-23  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 3.0.2-SNAPSHOT.

2020-07-15  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 3.0.1.

2020-06-12  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 3.0.0.

2020-05-13  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.2.3.

2020-02-12  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.2.1.
	Updated dependencies through parent POM 20200212.0.

2020-02-07  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.2.0.

2020-02-04  Allen D. Ball  <ball@hcf.dev>

	* Generated license-maven-plugin:update-file-header headers.

2020-02-03  Allen D. Ball  <ball@hcf.dev>

	* License under Apache License, Version 2.0.

2020-02-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 2.2-SNAPSHOT.

2020-01-30  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 2.1.0.

2020-01-18  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.0.3.
	Use ball:parent:20200117.0.

2020-01-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.0.2.
	Use ball:parent:20200102.0.

2019-12-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 2.0.1.
	Use ball:parent:20191206.0.

2019-03-27  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 2.0.0.

2019-02-07  Allen D. Ball  <ball@sol.local>

	* Removed custom annotations that have a javax.ws.rs counterpart.

2019-02-05  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ProtocolInvocationHandler.java:
	Support interface default methods.

	* src/main/java/ball/http/ProtocolRequestBuilder.java:
	Leverage parameter names through reflection.
	Define supported, un-annotated parameters.

2019-01-31  Allen D. Ball  <ball@sol.local>

	* Start development of 2.0-SNAPSHOT.

2018-07-31  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.0.

2018-07-24  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ProtocolClient.java: