@@ -20,25 +20,23 @@ package ball.http;
  * limitations under the License.
  * ##########################################################################
  */
-import java.lang.invoke.MethodHandles;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationHandler;
+import ball.lang.reflect.DefaultInterfaceMethodInvocationHandler;
 import java.lang.reflect.Method;
+import lombok.NonNull;
+import lombok.RequiredArgsConstructor;
 import lombok.ToString;
 import org.apache.http.HttpMessage;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.methods.HttpUriRequest;
 
-import static java.util.Objects.requireNonNull;
-
 /**
- * Protocol {@link InvocationHandler} for {@link ProtocolClient}.  The
- * {@link #invoke(Object,Method,Object[])} translates the interface
- * {@link Method} invocation into an {@link HttpMessage} through a
- * {@link ProtocolRequestBuilder}.  If the {@link Method#getReturnType()} is
- * assignable from the generated {@link HttpMessage}, then it is simply
- * returned; otherwise, the request is executed through
- * {@link ProtocolClient#client()} with the
+ * Protocol {@link java.lang.reflect.InvocationHandler} for
+ * {@link ProtocolClient}.  The {@link #invoke(Object,Method,Object[])}
+ * translates the interface {@link Method} invocation into an
+ * {@link HttpMessage} through a {@link ProtocolRequestBuilder}.  If the
+ * {@link Method#getReturnType()} is assignable from the generated
+ * {@link HttpMessage}, then it is simply returned; otherwise, the request
+ * is executed through {@link ProtocolClient#client()} with the
  * {@link ProtocolClient#context()}.  If the {@link Method#getReturnType()}
  * is {@link HttpResponse} then the response is returned with no further
  * processing (and the caller is responsible for consuming any entities).
@@ -47,18 +45,9 @@ import static java.util.Objects.requireNonNull;
  * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
  * @version $Revision$
  */
-@ToString
-public class ProtocolInvocationHandler implements InvocationHandler {
-    private final ProtocolClient<?> client;
-
-    /**
-     * Sole constructor.
-     *
-     * @param   client          The {@link ProtocolClient}.
-     */
-    protected ProtocolInvocationHandler(ProtocolClient<?> client) {
-        this.client = requireNonNull(client, "client");
-    }
+@RequiredArgsConstructor @ToString
+public class ProtocolInvocationHandler implements DefaultInterfaceMethodInvocationHandler {
+    @NonNull private final ProtocolClient<?> client;
 
     @Override
     public Object invoke(Object proxy,
@@ -67,17 +56,9 @@ public class ProtocolInvocationHandler implements InvocationHandler {
         Class<?> declarer = method.getDeclaringClass();
 
         if (method.isDefault()) {
-            Constructor<MethodHandles.Lookup> constructor =
-                MethodHandles.Lookup.class.getDeclaredConstructor(Class.class);
-
-            constructor.setAccessible(true);
-
             result =
-                constructor.newInstance(declarer)
-                .in(declarer)
-                .unreflectSpecial(method, declarer)
-                .bindTo(proxy)
-                .invokeWithArguments(argv);
+                DefaultInterfaceMethodInvocationHandler.super
+                .invoke(proxy, method, argv);
         } else if (declarer.equals(Object.class)) {
             result = method.invoke(proxy, argv);
         } else {
